tests/baselines/reference/jsFileCompilationOptionalParameter.errors.txt
tests/cases/compiler/a.js(1,13): error TS8009: '?' can only be used in a .ts file.


==== tests/cases/compiler/a.js (1 errors) ====
    function F(p?) { }
                ~
!!! error TS8009: '?' can only be used in a .ts file.